CRAFTY-GUI update adding new features for input/output data analysis
added new output for exact years, TakeOver depends on average...